--- a/tours/templates/tours/departure.html
+++ b/tours/templates/tours/departure.html
@@ -14,7 +14,7 @@
                         <div class="card-body">
                             <h2 class="h5 card-title">{{ tour.title }}</h2>
                             <p class="card-text">{{ tour.description }}</p>
-                            <a href="#" class="btn btn-sm btn-primary">Подробнее</a>
+                            <a href="/tour/{{ id }}" class="btn btn-sm btn-primary">Подробнее</a>
                         </div>
                     </div>
                 </div>
