--- a/tours/templates/tours/base.html
+++ b/tours/templates/tours/base.html
@@ -11,7 +11,7 @@
 <body>
 <header class="container mt-3">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Stepik Travel</a>
+        <a class="navbar-brand" href="/">Stepik Travel</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -19,19 +19,19 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Из Москвы</a>
+                    <a class="nav-link" href="/departure/msk">Из Москвы</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Из Петербурга</a>
+                    <a class="nav-link" href="/departure/spb">Из Петербурга</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Из Новосибирска</a>
+                    <a class="nav-link" href="/departure/nsk">Из Новосибирска</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Из Екатеринбурга</a>
+                    <a class="nav-link" href="/departure/ekb">Из Екатеринбурга</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Из Казани</a>
+                    <a class="nav-link" href="/departure/kazan">Из Казани</a>
                 </li>
             </ul>
         </div>
