--- a/tours/templates/tours/departure.html
+++ b/tours/templates/tours/departure.html
@@ -3,7 +3,7 @@
 {% block content %}
     <main class="container mt-3">
         <h1 class="display-5 mt-4">Летим {{ departure }}</h1>
-        <p class="mb-4">Найдено {{ tours.items|length }} туров, от {{ min_max_prices.min }} до {{ min_max_prices.max }}
+        <p class="mb-4">Найдено {{ tours.items|length }} тур, от {{ min_max_prices.min }} до {{ min_max_prices.max }}
             и от {{ min_max_nights.min }} ночей до {{ min_max_nights.max }} ночей</p>
         <!-- CARDS -->
         <div class="row mt-5">
