--- a/tours/templates/tours/base.html
+++ b/tours/templates/tours/base.html
@@ -18,21 +18,11 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="/departure/msk">Из Москвы</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/departure/spb">Из Петербурга</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/departure/nsk">Из Новосибирска</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/departure/ekb">Из Екатеринбурга</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/departure/kazan">Из Казани</a>
-                </li>
+                {% for dep, text in available_departures.items %}
+                    <li class="nav-item active">
+                        <a href="/departure/{{ dep }}" class="nav-link">{{ text }}</a>
+                    </li>
+                {% endfor %}
             </ul>
         </div>
     </nav>
