--- a/tours/templates/tours/base.html
+++ b/tours/templates/tours/base.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Stepik Travel</title>
+    <title>Travel</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
@@ -11,7 +11,7 @@
 <body>
 <header class="container mt-3">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="/">Stepik Travel</a>
+        <a class="navbar-brand" href="{% url 'main' %}">Travel</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -20,7 +20,7 @@
             <ul class="navbar-nav">
                 {% for dep, text in available_departures.items %}
                     <li class="nav-item active">
-                        <a href="/departure/{{ dep }}" class="nav-link">{{ text }}</a>
+                        <a href="{% url 'departure' dep %}" class="nav-link">{{ text }}</a>
                     </li>
                 {% endfor %}
             </ul>
